--- a/.github/workflows/cd-docker.yml
+++ b/.github/workflows/cd-docker.yml
@@ -34,4 +34,4 @@ jobs:
               run: sudo docker image remove fuderrpham/be_cyber_media:latest || true
 
             - name: chạy lại với docker compose
-              run: docker compose up -d
+              run: sudo docker compose up -d
